crates/nash-can/src/snapshots/nash_can__module__tests__binop_function_must_be_top_level.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((|>))\n\ninfix left 6 (|>) = missing\n"
info: diagnostic
---
nash::names::binop_function_not_found

  × Operator `(|>)` refers to undefined function `missing`.
   ╭─[src/Main.nash:3:1]
 2 │ 
 3 │ infix left 6 (|>) = missing
   · ────────────────────────────
   ╰────
  help: Define it, or point the `infix` declaration at an existing top-level value.
