crates/nash-can/src/snapshots/nash_can__module__tests__binop_non_assoc_conflict.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Basics exposing (..)\n\nx a b c = a == b == c\n"
info: diagnostic
---
nash::names::binop_conflict

  × You cannot mix (==) and (==) without parentheses.
   ╭─[src/Main.nash:5:11]
 4 │ 
 5 │ x a b c = a == b == c
   ·           ───────────
   ╰────
  help: Add parentheses to specify the grouping.
