crates/nash-can/src/snapshots/nash_can__module__tests__bytes_expression_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nvalue = #\"ff00\"\n"
---
[
    Unsupported {
        feature: "bytes literal",
        region: Region {
            start: Position {
                line: 3,
                column: 9,
            },
            end: Position {
                line: 3,
                column: 16,
            },
        },
    },
]
